squishy dots issue

--- a/wp-content/themes/rachelcole/template-replenish/assets/css/replenish.css
+++ b/wp-content/themes/rachelcole/template-replenish/assets/css/replenish.css
@@ -1600,8 +1600,9 @@ and (max-width: 767px) {
   color: transparent;
   text-indent: -999999px;
   overflow: hidden;
+  padding: 0;
   height: 12px;
-  width: 10px;
+  width: 12px;
   border-radius: 50%;
   transition: all .2s ease-in-out;
 }
